[package]
name = "ziputil"
version = "0.8.0"
authors = ["Chris Davison <c.jr.davison@gmail.com>"]
edition = "2018"
description = "Easily access or view specific files within a zip"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
zip="0.6.6"
anyhow = "1.0.80"
structopt = "0.3.26"
skim = "0.10.4"
